tests/baselines/reference/ambientExternalModuleWithRelativeModuleName.errors.txt
==== tests/cases/compiler/ambientExternalModuleWithRelativeModuleName.ts (2 errors) ====
    declare module "./relativeModule" {
                   ~~~~~~~~~~~~~~~~~~
!!! error TS2436: Ambient external module declaration cannot specify relative module name.
        var x: string;
    }
    
    declare module ".\\relativeModule" {
                   ~~~~~~~~~~~~~~~~~~~
!!! error TS2436: Ambient external module declaration cannot specify relative module name.
        var x: string;
    }